--- a/style.css
+++ b/style.css
@@ -3,10 +3,12 @@
     box-sizing: border-box;
 }
 
-
+.nav-container {
+    display: flex;
+    margin: auto;
+}
 
 .nav-container {
-    display: inline;
     margin: 10px;
     padding: 20px;
 }
