--- a/style-index.css
+++ b/style-index.css
@@ -176,3 +176,57 @@
 .iniciar-sesion input[type="submit"]:hover {
   background-color: #2a82da;
 }
+
+.contactanos{
+  background-color: #111;
+  height: 100 vh;
+  text-transform: uppercase;
+  
+}
+
+.contactanos h1{
+  color: white;
+  text-align: center;
+  font-size: 2 em;
+  margin-bottom: 20 px;
+}
+
+.contactanos form {
+  background-color: #111;
+  border-radius: 12px;
+  width: 50%;
+  padding: 20px;
+  margin: 100px 40px;
+  border: rgb(141, 181,255) 5px inset;
+  float: left;
+
+}
+.contactanos input[type="submit"] {
+  background-color: rgb(141, 181, 255);
+  border: none;
+  border-radius: 8px;
+  color: #111111;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 10px;
+  width: 30%;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 0;
+}
+.contactanos div {
+  display: flex;
+  justify-content: center;
+}
+.contactanos input [type = "submit"]:hover{
+  background-color: #2a82da;
+}
+.contactanos input {
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  border: rgb(141, 181, 255) 2px outset;
+  font-size: 16px;
+  margin-bottom: 20px;
+  padding: 10px;
+  width: 90%;
+}
