--- a/style-index.css
+++ b/style-index.css
@@ -132,22 +132,13 @@
     text-transform: uppercase;
   }
   
-  .iniciar-sesion label {
-    display: block;
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 5px;
-    padding: 5px;
-    color: #9f9f9f;
-  }
-
 
 .iniciar-sesion input {
     border: 1px solid #ccc;
     border-radius: 3px;
     border: rgb(141, 181, 255) 2px outset;
     font-size: 16px;
-    margin-bottom: 20px;
+    margin: 10px 0;
     padding: 10px;
     width: 90%;
 }
@@ -177,18 +168,29 @@
   background-color: #2a82da;
 }
 
-.contactanos{
+.contactanos {
   background-color: #111;
-  height: 100 vh;
-  text-transform: uppercase;
+  height: 100vh;
+  width: 100%;
+  
   
 }
 
-.contactanos h1{
+.contactanos form {
+    background-color: #111;
+    border-radius: 12px;
+    width: 50%;
+    padding: 20px;
+    margin: 100px 40px;
+    border: rgb(141, 181,255) 5px inset;
+    float: right;
+}
+
+.contactanos h1 {
   color: white;
   text-align: center;
-  font-size: 2 em;
-  margin-bottom: 20 px;
+  font-size: 2em;
+  margin-bottom: 20px;
 }
 
 .contactanos form {
