Mejore el AboutUs.css

--- a/train-mate/src/css/About.css
+++ b/train-mate/src/css/About.css
@@ -1,3 +1,4 @@
+
 .caja {
     display: flex;
     align-items: center;
@@ -7,12 +8,14 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     padding: 20px;
     width: 900px;
-    font-family: "Times New Roman", sans-serif;
+    font-family: sans-serif;
+    margin-bottom: 100px;
 }
 
 .caja p {
-    margin-right: 80px; /* Añadimos un margen a la derecha del texto para separarlo de la imagen */
+    margin-right: 80px;
     font-size: 25px;
+    margin-bottom: 10px;
 }
 
 .caja img {
