--- a/train-mate/src/css/NavBar.css
+++ b/train-mate/src/css/NavBar.css
@@ -2,9 +2,6 @@
     background-color: #212529;
 }
 
-
-
-
 .container-brand h1{
     font-size: 2em;
     color: whitesmoke;
@@ -14,7 +11,7 @@
     color: #8db5ff;
 }
 
-p {
+.navbar-brand p {
     color: whitesmoke;
     font-size: 1.5em;
     margin-top: 60px;
